# tobe

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pr-description.txt
.github/workflows/: release.yml
flathub/: cargo-sources.json  com.tobe.app.appdata.xml  com.tobe.app.desktop  com.tobe.app.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: com.tobe.app.metainfo.xml  icon.icns
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  settings.rs  subscriptions.rs  videos.rs
src-tauri/src/models/: comment.rs  mod.rs  settings.rs  subscription.rs  video.rs
src-tauri/src/services/: invidious.rs  mod.rs
src/js/: api.js  app.js  subscriptions.js
src/styles/: main.css  sidebar.css  video.css
